--- a/src/styles.css
+++ b/src/styles.css
@@ -1,332 +1,41 @@
-html {
-  box-sizing: border-box;
-  width: 100vw;
-  overflow-x: hidden;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  transition: color 150ms ease-out, background-color 150ms ease-out;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 26px;
 }
 
-body.light-theme {
-  background-color: #fff;
-  color: #333333;
+.text {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
 }
 
-body.dark-theme {
-  background-color: #333333;
-  color: #fff;
+.input {
+  width: 300px;
 }
 
-.toolbar {
-  display: flex;
-  justify-content: flex-end;
-  padding: 16px 24px;
+.name {
+  text-align: center;
 }
 
-/* THEME SWITCH */
-.theme-switch {
-  display: flex;
-  align-items: center;
-  transition: color 150ms ease-in 0;
-}
-
-.theme-switch__icon {
-  color: currentColor;
-  height: 26px;
-  margin-right: 8px;
-  margin-left: 8px;
-}
-
-.switch {
-  display: flex;
-  flex-shrink: 0;
-  align-items: center;
-  position: relative;
-  width: 64px;
-  height: 32px;
-  border-radius: 50em;
-  padding: 3px 0;
-}
-
-.switch__input,
-.switch__label {
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
-.switch__input {
-  margin: 0;
-  padding: 0;
-  opacity: 0;
-  height: 0;
-  width: 0;
-  pointer-events: none;
-}
-
-.switch__input:checked + .switch__label {
-  background-color: #d3d3d4;
-}
-
-.switch__input:checked + .switch__label + .switch__marker {
-  left: calc(100% - 29px);
-}
-
-.switch__input:focus + .switch__label,
-.switch__input:active + .switch__label {
-  box-shadow: 0 0 0 3px #2a6df433;
-}
-
-.switch__label {
-  width: 100%;
-  height: 100%;
-  color: transparent;
-  user-select: none;
-  background-color: #333;
-  border-radius: inherit;
-  z-index: 1;
-  transition: background-color 150ms;
-  cursor: pointer;
-}
-
-.switch__marker {
-  position: relative;
-  background-color: #fff;
-  width: 26px;
-  height: 26px;
-  border-radius: 50%;
-  z-index: 2;
-  pointer-events: none;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-  left: 3px;
-  transition: left 200ms;
-  will-change: left;
-}
-
-/* MENU */
-
-.menu {
-  padding: 0;
-  margin: 0;
+.list {
   list-style: none;
-  max-width: calc(100% - 64px);
-  margin-left: auto;
-  margin-right: auto;
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  grid-gap: 24px;
 }
 
-.card {
-  position: relative;
+.container {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  padding-bottom: 8px;
-}
-
-.card__content {
-  display: flex;
-  flex-direction: column;
-  padding: 8px;
-  flex-grow: 1;
-}
-
-.card__image {
-  height: 300px;
-  object-fit: cover;
-  max-width: 100%;
-}
-
-.card__name {
-  margin-top: 16px;
-  margin-bottom: 0;
-  font-size: 24px;
-  font-weight: 500;
-}
-
-.card__descr {
-  line-height: 1.5;
-  flex-grow: 1;
-}
-
-.card__price {
-  display: flex;
-  align-items: center;
-  margin-top: 24px;
-  font-size: 20px;
-}
-
-.card__price i {
-  margin-right: 8px;
-  font-size: 24px;
-}
-
-.card__reviews {
-  display: block;
-  margin-top: 16px;
-}
-
-.card__button {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 16px;
-  width: calc(100% - 16px);
-}
-
-.tag-list {
-  display: flex;
+  justify-content: space-around;
   flex-wrap: wrap;
-  padding: 0;
-  margin: 0;
-  list-style: none;
 }
 
-.tag-list__item {
-  padding: 4px 8px;
-  margin: 4px;
-  border-radius: 2px;
-  background-color: #3f51b5;
-  color: #fff;
+.list-items {
+  margin-bottom: 20px;
 }
 
-.button {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  background-color: #2196f3;
-  border: 0;
-  outline: 0;
-  padding: 8px 24px;
-  border-radius: 4px;
-  cursor: pointer;
-  box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.05);
-  font: inherit;
-  font-weight: 500;
-  user-select: none;
-  transition: background-color 200ms ease-in-out;
+.languages_item {
+  padding: 5px 0;
 }
 
-.button:hover {
-  box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.15);
-  background-color: #1976d2;
-}
+/* ========= */
 
-.button__icon {
-  margin-right: 8px;
-}
-
-
-/* -------- */
-.js-button-cart{
-  display:inline-block;
-  width: 50px;
-  
-  
-}
-.js-button:hover {
-  box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.15);
-  background-color: #2196f3;
-}
-
-.js-button {
-  display: inline-flex;
-  align-items: center;
-  justify-content: flex-end;
-  
-  
-  border: 0;
-  outline: 0;
-  padding: 4px 24px;
-  border-radius: 4px;
-  cursor: pointer;
-  box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.05);
-  font: inherit;
-  font-weight: 500;
-  user-select: none;
-  transition: background-color 200ms ease-in-out;
-
-
-  
- display: block;
- margin-left: auto;
- margin-top: 4px;
- 
-
-}
-.modal{
-  padding: 1.8rem 2.16rem .9rem;
-    width: 550px;
-    max-width: 1300px;
-    background: #fff;
-    border-radius: 4px;
-    text-align: center;
-    box-shadow: 0 5px 20px rgba(0,0,0,.2);
-}
-.text-in-cart{
-  color:blue;
-}
-.modal{
-  background-color: rgb(63, 81, 181);
-  display:flex;
-  justify-content: space-between;
-}
-.cart-dish__item{
-  display:flex;
-  justify-content:space-between;
-
-}
-.modal {
-  padding: 1.8rem  .9rem;
-  width: 700px;
-}
-.modal__form-wrapper{
-  padding: 1.8rem  .9rem;
-  width: 700px;
-
-}
-.orderList{
-  padding:0;
-}
-.cart-dish__list-item{
-  margin:0  10px;
-}
-.modalBtn{
-  position:absolute;
-  right:10px ;
-  top:10px;
-}
-.orderButton{
-  /* display: inline-flex;
-  align-items: center;
-  justify-content: flex-end; */
-  margin-top:10px;
-  border: 0;
-  outline: 0;
-  padding: 4px 24px;
-  border-radius: 4px;
-  cursor: pointer;
-  
-  /* font: inherit; */
-  font-weight: 500;
-  
-  /* display: block; */
-  
-}
-.orderButton:hover{
-  box-shadow: 2px 2px 2px 2px rgba(59, 55, 55, 0.699);
+.countries-list {
+  margin-bottom: 10px;
 }
